# voxei

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: sponza.svo
assets/cat/: cat.mtl
macros/: Cargo.toml
macros/src/: lib.rs  vulkan_resource.rs
shaders/: build_voxel_svo.comp.glsl  debug.frag.glsl  debug.vert.glsl  fxaa.comp.glsl  normal_calc.comp.glsl  ray_march.comp.glsl  voxel.comp.glsl  voxelize.comp.glsl
shaders/lib/: constants.glsl  intersect.glsl  types.glsl  utils.glsl  voxel.glsl
shaders/lib/types/: ray.glsl  voxel.glsl
src/: app.rs  constants.rs  game_loop.rs  main.rs  settings.rs  setup.rs
src/engine/: mod.rs  resource.rs  system.rs
src/engine/assets/: asset.rs  manager.rs  mod.rs  watched_shaders.rs
src/engine/assets/loader/: mod.rs  obj.rs  octree.rs  spirv.rs
src/engine/common/: camera.rs  color.rs  mod.rs  time.rs  transform.rs
src/engine/ecs/: ecs_world.rs  world.rs
src/engine/geometry/: mod.rs  ray.rs
src/engine/geometry/shapes/: aabb.rs  mod.rs  triangle.rs
src/engine/graphics/: common.rs  device.rs  mod.rs  pipeline_manager.rs  render_manager.rs  resource_manager.rs  swapchain.rs
src/engine/input/: input.rs  keyboard.rs  mouse.rs
src/engine/model/: mesh.rs
src/engine/physics/: mod.rs  phy_world.rs  world.rs
src/engine/voxel/: chunk_generator.rs  dynamic_world.rs  mod.rs  morton.rs  octree.rs  static_world.rs  vox_world.rs  voxel.rs  voxelizer.rs
src/engine/window/: mod.rs  window.rs
src/game/: app.rs  game_loop.rs  mod.rs
src/game/graphics/: gfx_constants.rs  mod.rs  queues.rs  render_manager.rs
src/game/player/: player.rs
src/game/setup/: mod.rs
src/game/world/: mod.rs  world_constants.rs
src/setup/world/: mod.rs
(+37 files in other folders)
