[package]
name = "voxei"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = { git = "https://github.com/ash-rs/ash", branch = "rwh-0.6" }
ash-window = { git = "https://github.com/ash-rs/ash", branch = "rwh-0.6" }
downcast = "0.11.0"
nalgebra = "0.32.3"
notify = "6.1.1"
parking_lot = "0.12.1"
raw-window-handle = "0.6.0"
rayon = "1.8.0"
regex = "1.10.2"
shaderc = "0.8.3"
slotmap = "1.0.7"
tobj = "4.0.1"
uuid = { version = "1.6.1", features = ["v4"] }
voxei-macros = { path = "./macros" }
winit = "0.29.4"
