[package]
name = "voxei"
version = "0.1.0"
edition = "2021"

[dependencies]
downcast = "0.11.0"
egui = "0.26.2"
egui-winit = "0.26.2"
hecs = "0.10.4"
nalgebra = "0.32.3"
notify = "6.1.1"
parking_lot = "0.12.1"
paya = { path = "../paya/paya" }
raw-window-handle = "0.6.0"
rand = "0.8.5"
rayon = "1.8.0"
regex = "1.10.2"
ron = "0.8.1"
serde = { version = "1.0.196", features = ["derive"] }
slotmap = "1.0.7"
tobj = "4.0.1"
uuid = { version = "1.6.1", features = ["v4"] }
voxei-macros = { path = "./macros" }
winit = "0.29.11"
